[package]
name = "idc-connectme"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
fantoccini = "0.22.0"
open = "5.3.2"
regex = "1.12.2"
scraper = "0.24.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
  "io-util",
  "process",
  "macros",
  "rt-multi-thread",
] }
