[package]
name = "idc-connectme"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
fantoccini = "0.22.0"
notify-rust = "4.11.7"
open = "5.3.2"
regex = "1.12.2"
reqwest = "0.12.24"
scraper = "0.24.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
  "io-util",
  "process",
  "macros",
  "rt-multi-thread",
] }

[[bin]]
name = "idc-connectme"
path = "src/main.rs"
